--- a/templates/product/checkout.html.twig
+++ b/templates/product/checkout.html.twig
@@ -3,12 +3,6 @@
 {% block title %}Product index{% endblock %}
 
 {% block body %}
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-    <!------ Include the above in your HEAD tag ---------->
-
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <div class="container-fluid">
         <table id="cart" class="table table-hover table-condensed">
             <thead>
@@ -26,9 +20,10 @@
             <tr>
                 <td data-th="Product">
                     <div class="row">
-                        <div class="col-sm-2"><img src="http://placehold.it/100x100" alt="..." class="img-responsive"/></div>
-                        <div class="col-sm-10">
-                            <h4 class="nomargin">{{ product.Product.id }}</h4>
+                        <div>
+                            <img src="http://placehold.it/100x100" alt="..." class="img-responsive"/></div>
+                        <div class="ml-5">
+                            <h4 class="nomargin">{{ product.Product.name }}</h4>
                             <p>{{ product.Product.description }}</p>
                         </div>
                     </div>
@@ -39,8 +34,8 @@
                     <p class="product_aantal">{{ product.Amount }}</p>
                 </td>
                 <td></td>
-                {% set total = product.Amount * product.Product.price %}
-                <td data-th="Subtotal" class="text-center">{{ total }}</td>
+                {% set subtotal = product.Amount * product.Product.price %}
+                <td data-th="Subtotal" class="text-center">€{{ subtotal }}</td>
             </tr>
             </tbody>
             {% else %}
@@ -49,25 +44,21 @@
                 </tr>
             {% endfor %}
             <tfoot>
-            {% for product in Products %}
-                <tr class="visible-xs">
-                    <td class="text-center"><strong>{{ product.Product.price }}</strong></td>
-                </tr>
-            {% endfor %}
             <tr>
-                <td><a href="{{ path('product_index') }}" class="btn btn-warning"><i class="fa fa-angle-left"></i> Continue Shopping</a>
+                <td><a href="{{ path('product_index') }}" class="btn btn-warning"><i class="fa fa-angle-left"></i>
+                        Continue Shopping</a>
                 <td></td>
                 <td></td>
                 <td></td>
-                <td class="text-center"><strong><p>{{ total }}</p></strong></td>
+                <td class="text-center"><strong><p>€{{ total }}</p></strong></td>
                 {#<td><a href="{{ path('product_checkout') }}" class="btn btn-success btn-block">Checkout <i class="fa fa-angle-right"></i></a></td>#}
                 <td></td>
             </tr>
-            <tr>
-                <td class="pt-5">
+            <tr class="row">
+                <td class="pt-5 col-12">
                     {{ form_start(submitForm) }}
                     {{ form_widget(submitForm) }}
-                    <input type="submit" class="btn btn-success btn-block" value="Checkout">
+                    <input type="submit" class="btn btn-danger btn-block" value="Checkout">
                     {{ form_end(submitForm) }}
                 </td>
             </tr>
