--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -25,9 +25,9 @@
                 <td>{{ product.price }}</td>
                 <td>{{ product.image }}</td>
                 <td>
-                    <a href="{{ path('product_show', {'id': product.id}) }}">show</a>
-                    <a href="{{ path('product_edit', {'id': product.id}) }}">edit</a>
-                    <a href="{{ path('product_addtocart', {'id': product.id}) }}">add to card</a>
+                    <a class="btn btn-danger" href="{{ path('product_show', {'id': product.id}) }}">show</a>
+                    <a class="btn btn-danger" href="{{ path('product_edit', {'id': product.id}) }}">edit</a>
+                    <a class="btn btn-danger" href="{{ path('product_addtocart', {'id': product.id}) }}">add to cart</a>
 
                 </td>
             </tr>
@@ -39,5 +39,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('product_new') }}">Create new</a>
+    <a class="btn btn-danger" href="{{ path('product_new') }}">Create new</a>
 {% endblock %}
