--- a/templates/product/new.html.twig
+++ b/templates/product/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('product/_form.html.twig') }}
 
-    <a href="{{ path('product_index') }}">back to list</a>
+    <a class="btn btn-danger" href="{{ path('product_index') }}">back to list</a>
 {% endblock %}
