--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -24,6 +24,10 @@
                 <td>{{ product.price }}</td>
             </tr>
             <tr>
+                <th>Tax</th>
+                <td>{{ product.tax }}</td>
+            </tr>
+            <tr>
                 <th>Image</th>
                 <td>{{ product.image }}</td>
             </tr>
