--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -21,14 +21,44 @@
 <header>
     <nav class="navbar navbar-expand-sm navbar-dark bg-danger">
         <div class="container">
-            <a class="navbar-brand" href="{{ path('product_index') }}">Home</a>
+            <a class="navbar-brand" href="{{ path('default') }}">Home</a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('product_index') }}">Products</a>
                     </li>
+                    {% if is_granted('ROLE_ADMIN') %}
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Manage
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="{{ path('user_index') }}">Users</a>
+                                <a class="dropdown-item" href="{{ path('product_index') }}">Products</a>
+                                <a class="dropdown-item" href="{{ path('order_index') }}">Orders</a>
+                                <a class="dropdown-item" href="{{ path('brand_index') }}">Brands</a>
+                                <a class="dropdown-item" href="{{ path('category_index') }}">Categories</a>
+                            </div>
+                        </li>
+                        {% else %}
+                    {% endif %}
                 </ul>
                 <ul class="navbar-nav">
+                    {% if app.user == false %}
+                        <li class="nav-item">
+                            <a href="{{ path('fos_user_security_login') }}" class="nav-link">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="{{ path('fos_user_registration_register') }}" class="nav-link">Register</a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a href="{{ path('fos_user_security_logout') }}" class="nav-link">Logout</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="{{ path('fos_user_profile_show') }}" class="nav-link">Profile</a>
+                        </li>
+                    {% endif %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('product_checkout') }}">
                             Checkout
@@ -53,12 +83,15 @@
 </main><!-- /.container -->
 
 {% block javascripts %}{% endblock %}
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script>
-    const amounts = document.getElementsByClassName('amount')
+    const amounts = document.getElementsByClassName('amount');
     let total = 0
 
     for (let x = 0; x < amounts.length; x++) {
-        const amount = parseInt(amounts[x].innerText)
+        const amount = parseInt(amounts[x].innerText);
 
         total += amount
     }
