--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -15,6 +15,10 @@
                 <th>Name</th>
                 <td>{{ category.name }}</td>
             </tr>
+            tr>
+                <th>Description</th>
+                <td>{{ category.description }}</td>
+            </tr>
         </tbody>
     </table>
 
