--- a/templates/product/addtocart.html.twig
+++ b/templates/product/addtocart.html.twig
@@ -39,7 +39,8 @@
                 <td class="actions" data-th="">
                     <a style="color: white;" href="{{ path('product_addtocart', {'id': product.Product.id}) }}"
                        class="btn btn-info btn-sm"><i class="fa fa-plus"></i></a>
-                    <a class="btn btn-danger btn-sm"><i class="fa fa-trash-o"></i></a>
+                    <a style="color: white;" href="{{ path('product_remove', {'id': product.Product.id}) }}"
+                       class="btn btn-danger btn-sm"><i class="fa fa-trash-o"></i></a>
                 </td>
             </tr>
             </tbody>
