--- a/templates/post/new.html.twig
+++ b/templates/post/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('post/_form.html.twig') }}
 
-    <a href="{{ path('post_index') }}">back to list</a>
+    <a class="mdc-button mdc-button--raise bg-dark text-light" href="{{ path('post_index') }}">back to list</a>
 {% endblock %}
