--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -40,6 +40,11 @@
         .mdc-layout-grid{
             padding: 0 !important;
         }
+
+        .mdc-form-field label{
+            padding: 0;
+            margin-top: 8px;
+        }
     </style>
     {% block stylesheets %}{% endblock %}
 </head>
@@ -74,6 +79,13 @@
                     </li>
                 {% else %}
                     <li class="nav-item">
+                        <a href="{{ path('post_index') }}" class="nav-link text-dark">Posts</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="{{ path('category_index') }}"
+                           class="nav-link text-dark">Categories</a>
+                    </li>
+                    <li class="nav-item">
                         <a href="{{ path('fos_user_registration_register') }}"
                            class="nav-link text-dark">Register</a>
                     </li>
@@ -91,11 +103,11 @@
 {% block body %}{% endblock %}
 </div>
 {% block javascripts %}{% endblock %}
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script type="text/javascript">
     window.mdc.autoInit();
 </script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
