--- a/templates/post/_form.html.twig
+++ b/templates/post/_form.html.twig
@@ -1,4 +1,4 @@
 {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    <button class="mdc-button mdc-button--raise bg-dark text-light mb-2">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
