--- a/templates/bundles/FOSUserBundle/Security/login_content.html.twig
+++ b/templates/bundles/FOSUserBundle/Security/login_content.html.twig
@@ -38,5 +38,5 @@
         <label for="remember_me">{{ 'security.login.remember_me'|trans }} </label>
     </div>
     <br>
-    <input class="mdc-button mdc-button--raised mt-2 w-50 bg-warning" type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
+    <input class="mdc-button mdc-button--raised mt-2 w-50" type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
 </form>
