--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -12,7 +12,8 @@
             </a>
         </div>
         <div class="justify-content-end ml-auto text-left">
-            Created by: <a class="m-0 text-warning" href="{{ path('user_show', {'id': post.user.id }) }}">{{ post.user }}</a>
+            Created by: <a class="m-0 text-warning"
+                           href="{{ path('user_show', {'id': post.user.id }) }}">{{ post.user }}</a>
         </div>
     </div>
     <div class="mdc-layout-grid container">
@@ -34,7 +35,8 @@
                     <div class="media mb-4 bg-warning py-3 rounded px-1">
                         <img class="d-flex m-3 rounded-circle" src="http://placehold.it/50x50" alt="">
                         <div class="media-body">
-                            <a class="mt-0 text-light" href="{{ path('user_show', {'id': post.user.id }) }}"><h4>{{ comment.user }}</h4></a>
+                            <a class="mt-0 text-light" href="{{ path('user_show', {'id': post.user.id }) }}">
+                                <h4>{{ comment.user }}</h4></a>
                             {{ comment.description }}
                         </div>
                     </div>
@@ -44,7 +46,8 @@
                     <div class="media mb-4 border border-warning py-3 rounded px-1">
                         <img class="d-flex m-3 rounded-circle" src="http://placehold.it/50x50" alt="">
                         <div class="media-body">
-                            <a class="mt-0 text-warning" href="{{ path('user_show', {'id': post.user.id }) }}"><h4>{{ comment.user }}</h4></a>
+                            <a class="mt-0 text-warning" href="{{ path('user_show', {'id': post.user.id }) }}">
+                                <h4>{{ comment.user }}</h4></a>
                             {{ comment.description }}
                         </div>
                     </div>
@@ -66,28 +69,10 @@
                 </button>
             {% else %}
                 <p class="text-muted mt-2">
-                    Please <a class="text-warning" href="{{ path('fos_user_security_login') }}">login</a> to leave a comment
+                    Please <a class="text-warning" href="{{ path('fos_user_security_login') }}">login</a> to leave a
+                    comment
                 </p>
             {% endif %}
         </form>
     </div>
-
-    <div class="mdc-select">
-        <i class="mdc-select__dropdown-icon"></i>
-        <select class="mdc-select__native-control">
-            <option value="" disabled selected></option>
-            <option value="grains">
-                Bread, Cereal, Rice, and Pasta
-            </option>
-            <option value="vegetables">
-                Vegetables
-            </option>
-            <option value="fruit">
-                Fruit
-            </option>
-        </select>
-        <label class="mdc-floating-label">Pick a Food Group</label>
-        <div class="mdc-line-ripple"></div>
-    </div>
-
 {% endblock %}
