Non-responsive header

--- a/templates/components/header.html.twig
+++ b/templates/components/header.html.twig
@@ -1,16 +1,18 @@
 <section class="header">
     {% include 'components/navigation.html.twig' %}
-    <div class="container headerInfo d-lg-flex justify-content-between align-items-center">
-        <div class="col-lg-6 col-12">
-            <h1>Dutch Innovation Factory</h1>
-            <p class="py-3 py-lg-5">Integer est dolor, tempor vitae congue dignissim, euismod sit amet magna. Vivamus porttitor urna ornare
-                tortor commodo, nec congue ante iaculis. Pellentesque idnteger est dolor, tempor vitae congue dignissim, euismod sit amet magna. Vivamus porttitor urna ornare
-                tortor commodo, nec congue ante iaculis. Pellentesque idnteger est dolor, tempor vitae congue dignissim, euismod sit amet magna. Vivamus porttitor urna ornare
-                tortor commodo, nec congue ante iaculis. Pellentesque id.</p>
-            <a class="header-btn px-4 py-4" href="#">LEES MEER</a>
-        </div>
-        <div class="col-lg-6 col-12">
-            <iframe class="my-5" width="440" height="270" src="https://www.youtube.com/embed/RDPyhGLet1g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <div class="container-fluid col-lg-12 col-xl-10 headerInfo d-lg-flex justify-content-between align-items-center">
+        <div class="row">
+            <div class="col-lg-12 col-xl-6">
+                <h1>Dutch Innovation Factory</h1>
+                <p class="py-3 py-lg-5">Integer est dolor, tempor vitae congue dignissim,   euismod sit amet magna. Vivamus porttitor urna ornare
+                    tortor commodo, nec congue ante iaculis. Pellentesque idnteger est dolor, tempor vitae congue dignissim, euismod sit amet magna. Vivamus porttitor urna ornare
+                    tortor commodo, nec congue ante iaculis. Pellentesque idnteger est dolor, tempor vitae congue dignissim, euismod sit amet magna. Vivamus porttitor urna ornare
+                    tortor commodo, nec congue ante iaculis. Pellentesque id.</p>
+                <a class="header-btn px-4 py-4" href="#">LEES MEER</a>
+            </div>
+            <div class="col-lg-12 col-xl-6">
+                <iframe class="my-5" width="600" height="400" src="https://www.youtube.com/embed/RDPyhGLet1g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
         </div>
     </div>
 </section>
