--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -116,3 +116,9 @@ iframe, embed{
         margin-top: 15%;
     }
 }
+
+@media only screen and (min-width: 1440px){
+    .headerInfo iframe{
+        margin-left: 10%;
+    }
+}
