--- a/templates/components/navigation.html.twig
+++ b/templates/components/navigation.html.twig
@@ -1,4 +1,4 @@
-<nav class="container navbar navbar-expand-md navbar-dark py-4">
+<nav class="container-fluid col-lg-12 col-xl-10 navbar navbar-expand-md navbar-dark py-4">
     <a class="navbar-brand" href="#">
         <img src="{{ asset('images/DivLogo.png') }}" alt="x">
     </a>
