--- a/templates/survey/_form.html.twig
+++ b/templates/survey/_form.html.twig
@@ -1,14 +1,12 @@
 <script type="text/javascript" src={{ asset('js/jquery.collection.js') }}></script>
 
-{% form_theme form 'collectionTheme.html.twig' %}
 {{ form(form) }}
 
 <script type="text/javascript">
     $('.QuestionCollection').collection({
         allow_duplicate: true,
-        allow_up: true,
-        allow_down: true,
-        add: '<a href="#" class="btn btn-default" title="Add element"><span class="glyphicon glyphicon-plus-sign"></span></a>',
+        allow_up: false,
+        allow_down: false,
 
         // here is the magic!
         elements_selector: 'tr.item',
